<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:background="@color/purple">
    </androidx.appcompat.widget.Toolbar>
    <EditText
        android:id="@+id/inputET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:hint="@string/input"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainTB"
        app:layout_constraintVertical_bias="0.05">

    </EditText>

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:hint="@string/result"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputET"
        app:layout_constraintVertical_bias="0.01">

    </TextView>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="4"
        android:rowCount="7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultTV"
        app:layout_constraintVertical_bias="0.01">

        <Button
            android:id="@+id/divBTN"
            android:layout_row="0"
            android:layout_column="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/div">
        </Button>
        <Button
            android:id="@+id/oneBTN"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_1">
        </Button>
        <Button
            android:id="@+id/twoBTN"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="1"
            android:layout_columnWeight="1"
            android:text="@string/_2">
        </Button>
        <Button
            android:id="@+id/threeBTN"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:text="@string/_3">
        </Button>
        <Button
            android:id="@+id/multBTN"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/mult">
        </Button>
        <Button
            android:id="@+id/fourBTN"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_4">
        </Button>
        <Button
            android:id="@+id/fiveBTN"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_5">
        </Button>
        <Button
            android:id="@+id/sixBTN"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_6">
        </Button>

        <Button
            android:id="@+id/difBTN"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:layout_column="3"
            android:layout_columnWeight="1"
            android:text="@string/dif">
        </Button>

        <Button
            android:id="@+id/sevenBTN"
            android:layout_row="3"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_7">
        </Button>
        <Button
            android:id="@+id/eightBTN"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_8">
        </Button>
        <Button
            android:id="@+id/nineBTN"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_9">
        </Button>
        <Button
            android:id="@+id/zeroBTN"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_columnSpan="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/_0">
        </Button>
        <Button
            android:id="@+id/equalBTN"
            android:layout_row="5"
            android:layout_column="0"
            android:layout_columnSpan="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/equal">
        </Button>
        <Button
            android:id="@+id/resetBTN"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_columnSpan="4"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/reset">
        </Button>
        <Button
            android:id="@+id/plusBTN"
            android:layout_row="3"
            android:layout_column="3"
            android:layout_rowSpan="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:text="@string/plus">
        </Button>
    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>